tests/baselines/reference/asOperator2.errors.txt
tests/cases/conformance/expressions/asOperator/asOperator2.ts(1,9): error TS2323: Type 'number' is not comparable to type 'string'.


==== tests/cases/conformance/expressions/asOperator/asOperator2.ts (1 errors) ====
    var x = 23 as string;
            ~~~~~~~~~~~~
!!! error TS2323: Type 'number' is not comparable to type 'string'.
    